# GabberMasterClone

./: .gitignore  BUILD_INSTRUCTIONS.md  GITHUB_INSTRUCTIONS.md  build_to_H_BUILDS_GC.ps1
.github/workflows/: build.yml
GabbermasterClone/: CMakeLists.txt  build.sh
KickSynth/: CMakeLists.txt  README.md
KickSynth/Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
KickSynth/Source/DSP/: KickDistortion.cpp  KickDistortion.h  KickLimiter.cpp  KickLimiter.h  KickVoice.cpp  KickVoice.h
KickSynth/Tools/: AnalysisTool.cpp  KickMetrics.cpp  KickMetrics.h  KickParams.cpp  KickParams.h  KickRenderEngine.cpp  KickRenderEngine.h  MatchHelper.cpp  MatchHelper.h  kick_analyze.cpp  kick_fit.cpp  kick_render.cpp
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleManager.cpp  SampleManager.h
Source/DSP/: CurveEQ.h  Distortion.cpp  Distortion.h  EQ.h  Filter.cpp  Filter.h  KickVoice.cpp  KickVoice.h  LayerProcessor.h  Reverb.cpp  Reverb.h
